Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjBoolObjField.quorum
class Main
    Boolean b
    Boolean bool
    action Main
        b:SetValue(true)
        bool = cast(Boolean, b)
        if bool:GetValue() = true
            output "passed"
        end
    end
end