Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberBoolObj.quorum
class main
    action Main
        Boolean b
        number num
        b:SetValue(true)
        num = cast(number, b)
    end
end